<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8B8E4"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/button"
        android:backgroundTint="#00FFFF"
        android:textColor="#000000"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/guessEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guessEditText"
        app:layout_constraintTop_toTopOf="@+id/guessEditText" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#7048B6"
        android:elevation="4dp"
        android:text="@string/reset_button"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn"
        app:layout_constraintEnd_toEndOf="@+id/btn"
        app:layout_constraintStart_toStartOf="@+id/btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.969"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/guessEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_guess"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.882"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/answerTextView"
        android:layout_width="202dp"
        android:layout_height="44dp"
        android:elevation="4dp"
        android:text="@string/answer"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guessEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/guessDisplayTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:elevation="4dp"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/guessTitleTextView1"
        app:layout_constraintStart_toEndOf="@+id/guessTitleTextView1"
        app:layout_constraintTop_toTopOf="@+id/guessTitleTextView1"
        app:layout_constraintVertical_bias="0.0"
        tools:text="debug text view 1"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/guessDisplayTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:textSize="20sp"
        android:visibility="gone"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/guessTitleTextView2"
        app:layout_constraintStart_toEndOf="@+id/guessTitleTextView2"
        app:layout_constraintTop_toTopOf="@+id/guessTitleTextView2"
        app:layout_constraintVertical_bias="0.0"
        tools:text="debug text view 2"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/guessDisplayTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:textSize="20sp"
        android:visibility="gone"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/guessTitleTextView3"
        app:layout_constraintStart_toEndOf="@+id/guessTitleTextView3"
        app:layout_constraintTop_toTopOf="@+id/guessTitleTextView3"
        app:layout_constraintVertical_bias="0.0"
        tools:text="debug text view 3"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/guessTitleTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="376dp"
        android:elevation="4dp"
        android:text="@string/guess_one"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/guessTitleTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_two"
        android:textSize="20sp"
        android:visibility="gone"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guessTitleTextView1"
        app:layout_constraintVertical_bias="0.036"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/guessTitleTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_three"
        android:textSize="20sp"
        android:visibility="gone"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guessTitleTextView2"
        app:layout_constraintVertical_bias="0.039"
        tools:visibility="visible" />


    <TextView
        android:id="@+id/instructions2"
        android:layout_width="265dp"
        android:layout_height="235dp"
        android:background="@drawable/textview_border"
        android:elevation="4dp"
        android:text="@string/instructions"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389" />

    <ImageView
        android:id="@+id/wordle"
        android:layout_width="381dp"
        android:layout_height="240dp"
        app:layout_constraintBottom_toTopOf="@+id/guessDisplayTextView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/wordle" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="156dp"
        android:layout_height="45dp"
        android:background="@drawable/textview_border"
        android:elevation="5dp"
        android:text="@string/instructions_title"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236" />

    <TextView
        android:id="@+id/winTextView"
        android:layout_width="207dp"
        android:layout_height="53dp"
        android:text="@string/win_text"
        android:elevation="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/answerTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guessTitleTextView3"
        app:layout_constraintVertical_bias="0.592" />


</androidx.constraintlayout.widget.ConstraintLayout>